# models/testdb_4.py
@@ -34,9 +34,10 @@ user = {
         'no': '',
         'date_of_issue': '',
         'date_of_exprity': '',
-    }
+    },
     # thông tin trường học
     'school': [{
+        'school_id': '',  # tên trường
         'school_name': '',  # tên trường
         'level_count': '',
         # cấp trường : vd tiểu học-1, trung học cơ sở-2, trung học phổ thông-3, đại học-4, học viện-4
@@ -53,13 +54,13 @@ user = {
                 # Lớp : vd Công nghệ phần mềm 1, công nghệ thông tin 2
                 'class': [{
                     'class_name': '',
-                    'start_year': ''
-                                  'graduate_year:''
+                    'start_year': '',
+                    'graduate_year': ''
                 },
                     {
                         'class_name': '',
-                        'start-year': ''
-                                      'graduate-year:''
+                        'start-year': '',
+                        'graduate-year': ''
                     }]
             },
                 {
@@ -78,7 +79,7 @@ user = {
                     ],
                 }
             ]
-        }]
+        }}]
 }
 
 ## Trường học
@@ -152,7 +153,7 @@ diplomas = {
             },
             'training_system': '',  # hệ đào tạo : vd cử nhân, kĩ sư, cao đẳng, trung cấp
             # thông tin user
-            'user': {
+            'student': {
                 'full_name': '',  # tên đầy đủ: vd Nguyễn Bá Hải
                 'date_of_birth': '',  # ngày sinh
                 'province': ''  # Tỉnh
@@ -219,36 +220,36 @@ diplomas = {
     ]
 }
 
-## Resumes
-'transcript_academic': {
-    'transcript_academic_id': '',  # Mã môn học
-    'transcript_academic_name': '',  # Tên môn học
-    'transcript_academic_number': ''  # Số học tín chỉ, học phần
-}
-
-## Kiến trúc enum
-'academic_ability': {
-    'excellent': 'Giỏi',
-    'good': 'Khá'
-            'average': 'Trung bình'
-}
-
-## department - Khoa
-'department': {
-    'department_id': '',  # Mã khoa
-    'department_name': ''
-}
-
-## major - Nghành học
-'major': {
-    'major_id': '',  # Mã nghành
-    'major_name': ''
-}
-
-## role user
-'role_user': {
-    'admin': ' Quản trị',
-    'manager': 'Quản lý',
-    'teacher': 'Giáo viên',
-    'student': 'Sinh viên'
-}
+# ## Resumes
+# 'transcript_academic': {
+#     'transcript_academic_id': '',  # Mã môn học
+#     'transcript_academic_name': '',  # Tên môn học
+#     'transcript_academic_number': ''  # Số học tín chỉ, học phần
+# }
+#
+# ## Kiến trúc enum
+# 'academic_ability': {
+#     'excellent': 'Giỏi',
+#     'good': 'Khá'
+#             'average': 'Trung bình'
+# }
+#
+# ## department - Khoa
+# 'department': {
+#     'department_id': '',  # Mã khoa
+#     'department_name': ''
+# }
+#
+# ## major - Nghành học
+# 'major': {
+#     'major_id': '',  # Mã nghành
+#     'major_name': ''
+# }
+#
+# ## role user
+# 'role_user': {
+#     'admin': ' Quản trị',
+#     'manager': 'Quản lý',
+#     'teacher': 'Giáo viên',
+#     'student': 'Sinh viên'
+# }
